# modweaver

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
modweaver/: __init__.py  config.py  curse.py  format.py  main.py  mod.py  modrinth.py  murmur2.py  provider.py  remote.py  version.pyi
