[metadata]
name = modweaver
version = 1.0.0
author = tyra314 <tyra_oa@icloud.com>
description = A Minecraft mod manager for the command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyra314/modweaver
license = GPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/tyra314/modweaver
    Bug Tracker = https://github.com/tyra314/modweaver/issues

[options]
packages =
    modweaver
python_requires = >= 3.8
include_package_data = True
install_requires =
    aiofiles ~= 0.4.0
    aiohttp ~= 3.0
    click
    click-log
    click-completion
    colorama
    toml
    dacite
    python-dateutil

[options.package_data]
modweaver = py.typed

[options.extras_require]
typing =
    mypy
    types-aiofiles
    types-toml
    types-python-dateutil
dev =
    isort
    black
    %(typing)s

[pycodestyle]
ignore = E203, E501, E503
max-line-length = 88

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950,W504
ignore = E203, E501, W503